--- a/ice-cream-dataops/modules/bootcamp/use_cases/oee/functions/schedules.Schedule.yaml
+++ b/ice-cream-dataops/modules/bootcamp/use_cases/oee/functions/schedules.Schedule.yaml
@@ -2,5 +2,5 @@
   cronExpression: "5-59/5 * * * *"
   functionExternalId: oee_timeseries
   authentication:
-    clientId: {{ icapi_trigger_client_id }}
-    clientSecret: {{ icapi_trigger_client_secret }}
+    clientId: {{ icapi_extractors_client_id }}
+    clientSecret: {{ icapi_extractors_client_secret }}
